# ComfyUI_Detonate

./: CHANGELOG.md  CLAUDE.md  DEVLOG.md  LICENSE  NODE_SPECIFICATIONS.md  PLANNING.md  README.md  RELEASES.md  ROTO_BEZIER_USAGE.md  TASKS.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_node_loading.py
DOCS/: CHANGELOG_EXR_FILE_SELECTOR.md  ECOSYSTEM_GAP_ANALYSIS.md  EXR_WORKFLOW.md  MASKING_WORKFLOW.md  NODE_PRIORITIES.md  RELEASES.md
DOCS/nodes/: README.md
DOCS/nodes/channel/: premultiply.md
DOCS/nodes/color/: colorcorrect.md  grade.md
DOCS/nodes/compositing/: merge.md
DOCS/nodes/filter/: blur.md
DOCS/nodes/generator/: constant.md
DOCS/nodes/generators/: noise.md
DOCS/nodes/keying/: chromakeyer.md
DOCS/nodes/matte/: mattecontrol.md
DOCS/nodes/transform/: transform.md
nodes/channel/: channelcopy.py  premultiply.py  shuffle.py
nodes/color/: clamp.py  colorcorrect.py  colorcurves.py  exposure.py  grade.py  huesatval.py  invert.py  lut.py  saturation.py
nodes/compositing/: merge.py  seamblender.py  zmerge.py
nodes/cryptomatte/: __init__.py  cryptomatte_extract.py
nodes/filter/: blur.py  defocus.py  denoise.py  edgedetect.py  glow.py  grain.py  sharpen.py  vignette.py  zdefocus.py
nodes/generator/: __init__.py  constant.py  noise.py  ramp.py
nodes/io/: __init__.py  load_exr.py
nodes/keying/: chromakeyer.py  lumakeyer.py
nodes/matte/: ROTOBEZIER_DEPRECATED.md  edgedefringe.py  erode_dilate.py  mask_smoother.py  mattecontrol.py  roto_bezier.py  trimapgenerator.py
nodes/transform/: cornerpin.py  crop.py  displacementmap.py  gridwarp.py  transform.py
utils/: __init__.py  bezier_utils.py  color_math.py  image_processing.py  path_utils.py  tensor_utils.py
web/js/: detonate_roto_bezier.js
